# ai-mcp-agent

./: README.md  main.py  pyproject.toml
mcp-server/: server.py
