[project]
name = "ai-mcp-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.13.1",
    "langchain>=1.0.7",
    "langchain-mcp-adapters>=0.1.13",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.3",
    "youtube-transcript-api>=1.2.3",
]

